hphp/test/slow/class_type_constant/type_constant12.php.expectf
Fatal error: C cannot inherit the constant T from I, because it was previously inherited as a type constant from P in %stest/slow/class_type_constant/type_constant12.php on line 11
